BB-4205: Fix home page styles - fix products slider arrows align

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/embedded-list/embedded-list.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/embedded-list/embedded-list.scss
@@ -95,7 +95,7 @@
             overflow: hidden;
 
             position: absolute;
-            top: 25%;
+            top: 35%;
             z-index: 4;
 
             width: 32px;
